# Bridge-kun

./: .gitignore  README.md  package-lock.json  package.json  rough.js
.github/workflows/: deploy.yml
backend/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/src/: index.ts  scripts.ts  solana.ts  typesData.ts
backend/src/contract/: abi.ts
backend/src/contract/solana/idl/: bridge.json
backend/src/contract/solana/types/: bridge.ts
backend/src/utils/: utils.ts
contracts/: BNFSCoin.sol  BaseBridge.sol  IBNFSCoin.sol  NFSCoin.sol  PolygonBridge.sol
contracts/solana/anchor/: Anchor.toml  package-lock.json  package.json  res.json  sript.ts
contracts/solana/anchor/programs/bridge/: Cargo.toml
contracts/solana/anchor/programs/bridge/src/: lib.rs
contracts/solana/anchor/tests/: anchor.ts
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/class/: CustomError.ts
frontend/src/components/: ButtonComponent.tsx  ConnectWallet.tsx  DropDown.tsx  HeroSection.tsx  InputSections.tsx  NavBar.tsx  Transfer.tsx
frontend/src/components/custom-solana-wallet-adapter/: SolanaAdapterWallets.tsx
frontend/src/contract/: abi.ts
frontend/src/hooks/: baseFunctions.ts  polygonFunctions.ts  solanaFunctions.ts
frontend/src/store/: atoms.ts
test/: Contract.t.sol
